Repair Login/ Register Page

--- a/AryanITC.Web/Views/Home/Index.cshtml
+++ b/AryanITC.Web/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
                             <div class="top_left_cont flipInY wow animated">
                                 <h3>Colourful &amp; sexy!</h3>
                                 <h2>
-                                    درباره آریان؟
+                                    درباره آریان؟?/
 
                                 </h2>
                                 <p class="text-right">
