--- a/AryanITC.Web/Views/Account/Register.cshtml
+++ b/AryanITC.Web/Views/Account/Register.cshtml
@@ -1,10 +1,12 @@
-﻿@using Microsoft.AspNetCore.Mvc.Localization
+﻿@using AryanITC.Domain.ViewModels.Account
+@using Microsoft.AspNetCore.Mvc.Localization
 @model AryanITC.Domain.ViewModels.Account.RegisterUserViewModel
 @inject IViewLocalizer Localizer
 
 @{
     ViewData["Title"] = "ثبت نام";
 }
+
 
 <nav aria-label="breadcrumb">
     <ul class="breadcrumb">
@@ -21,16 +23,17 @@
             <a href="./log%20in.html"> @Localizer["Login"]  </a>
         </div>
         <form asp-controller="Account" asp-action="Register" method="post" class="form1">
+            <input type="hidden" name="returnUrl" value="@ViewBag.ReturnUrl" />
 
             <input asp-for="FirstName" class="un   form-control pass text-center" placeholder="نام">
             <span asp-validation-for="FirstName" class="field-validation-valid col-md-12 text-danger"></span>
 
             <input asp-for="LastName" class="un   form-control pass text-center" placeholder="نام خانوادگی">
             <span asp-validation-for="LastName" class="field-validation-valid col-md-12 text-danger"></span>
-            
+
             <input asp-for="Email" class="un    form-control pass text-center" placeholder="ایمیل">
             <span asp-validation-for="Email" class="field-validation-valid col-md-12 text-danger"></span>
-         
+
 
             <input asp-for="Mobile" class="un   form-control pass text-center" placeholder="موبایل" onkeyup="toEnglishNumber(this.value,'Mobile')">
             <span asp-validation-for="Mobile" class="field-validation-valid col-md-12 text-danger"></span>
@@ -41,7 +44,7 @@
             <input asp-for="ConfirmPassword" type="password" class="pass   form-control password" placeholder="تکرار رمز عبور">
             <span asp-validation-for="ConfirmPassword" class="field-validation-valid col-md-12 text-danger"></span>
 
-            <button type="submit" class="submit text-center">عضویت در سایت  </button>
+            <button type="submit" class="submit text-center" onclick="ShowMessage()">عضویت در سایت  </button>
             <p class="forgot text-center"><a href="./log%20in.html">بازگشت به صفحه ورود</a></p>
             <p class="forgot text-center"><a href="./ForgetPassword.html">رمز ورود خود را فراموش کردم!</a></p>
         </form>
@@ -49,4 +52,11 @@
 </section>
 
 
- 
+
+@section Scripts
+{
+    <script src="/lib/jquery/dist/jquery.js"></script>
+
+
+}
+    <partial name="Scripts" />
