--- a/AryanITC.Web/Views/Account/SuccessRegister.cshtml
+++ b/AryanITC.Web/Views/Account/SuccessRegister.cshtml
@@ -1,4 +1,5 @@
-﻿@using Microsoft.AspNetCore.Mvc.Localization
+﻿
+@using Microsoft.AspNetCore.Mvc.Localization
 @model AryanITC.Domain.ViewModels.Account.SuccessRegisterViewModel
 @inject IViewLocalizer Localizer
 
