--- a/AryanITC.Web/Views/Shared/_FooterRefrence.cshtml
+++ b/AryanITC.Web/Views/Shared/_FooterRefrence.cshtml
@@ -1,85 +1,100 @@
-﻿ 
+﻿<script src="/scripts/bootstrap.min.js"></script>
+
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@7/dist/sweetalert2.all.min.js"></script>
-
-<script src="~/Scripts/CustoumScript.js"></script>
-
-
-
-<script type="text/javascript">
-    jQuery(document).ready(function ($) {
-        // Portfolio Isotope
-        var container = $('#portfolio-wrap');
+<script language="JavaScript" type="text/javascript" src="/js/jquery.1.8.3.min.js"></script>
+<script language="JavaScript" type="text/javascript" src="/js/jquery.min.js"></script>
+<script language="JavaScript" type="text/javascript" src="/js/jquery-scrolltofixed.js"></script>
+<script language="JavaScript" type="text/javascript" src="/js/wow.js"></script>
 
 
-        container.isotope({
-            animationEngine: 'best-available',
-            animationOptions: {
-                duration: 200,
-                queue: false
-            },
-            layoutMode: 'fitRows'
-        });
 
-        $('#filters a').click(function () {
-            $('#filters a').removeClass('active');
-            $(this).addClass('active');
-            var selector = $(this).attr('data-filter');
+<script src="~/scripts/modules.js"></script>
+<script src="~/scripts/Notification.js"></script>
+<script src="~/scripts/main.js"></script>
+
+<script src="~/js/wow.js"></script>
+<script src="/scripts/customscripts.js"></script>
+<script src="~/scripts/Custom.js"></script>
+<script src="~/scripts/CustoumScript.js"></script>
+
+
+@*<script type="text/javascript">
+        jQuery(document).ready(function ($) {
+            // Portfolio Isotope
+            var container = $('#portfolio-wrap');
+
+
             container.isotope({
-                filter: selector
+                animationEngine: 'best-available',
+                animationOptions: {
+                    duration: 200,
+                    queue: false
+                },
+                layoutMode: 'fitRows'
             });
-            setProjects();
-            return false;
-        });
+
+            $('#filters a').click(function () {
+                $('#filters a').removeClass('active');
+                $(this).addClass('active');
+                var selector = $(this).attr('data-filter');
+                container.isotope({
+                    filter: selector
+                });
+                setProjects();
+                return false;
+            });
 
 
-        function splitColumns() {
-            var winWidth = $(window).width(),
-                columnNumb = 1;
+            function splitColumns() {
+                var winWidth = $(window).width(),
+                    columnNumb = 1;
 
 
-            if (winWidth > 1024) {
-                columnNumb = 4;
-            } else if (winWidth > 900) {
-                columnNumb = 2;
-            } else if (winWidth > 479) {
-                columnNumb = 2;
-            } else if (winWidth < 479) {
-                columnNumb = 1;
+                if (winWidth > 1024) {
+                    columnNumb = 4;
+                } else if (winWidth > 900) {
+                    columnNumb = 2;
+                } else if (winWidth > 479) {
+                    columnNumb = 2;
+                } else if (winWidth < 479) {
+                    columnNumb = 1;
+                }
+
+                return columnNumb;
             }
 
-            return columnNumb;
-        }
+            function setColumns() {
+                var winWidth = $(window).width(),
+                    columnNumb = splitColumns(),
+                    postWidth = Math.floor(winWidth / columnNumb);
 
-        function setColumns() {
-            var winWidth = $(window).width(),
-                columnNumb = splitColumns(),
-                postWidth = Math.floor(winWidth / columnNumb);
-
-            container.find('.portfolio-item').each(function () {
-                $(this).css({
-                    width: postWidth + 'px'
+                container.find('.portfolio-item').each(function () {
+                    $(this).css({
+                        width: postWidth + 'px'
+                    });
                 });
+            }
+
+            function setProjects() {
+                setColumns();
+                container.isotope('reLayout');
+            }
+
+            container.imagesLoaded(function () {
+                setColumns();
             });
-        }
 
-        function setProjects() {
-            setColumns();
-            container.isotope('reLayout');
-        }
 
-        container.imagesLoaded(function () {
-            setColumns();
+            $(window).bind('resize', function () {
+                setProjects();
+            });
+
         });
-
-
-        $(window).bind('resize', function () {
-            setProjects();
+        $(window).load(function () {
+            jQuery('#all').click();
+            return false;
         });
+    </script>
+    <script src="~/contactform/contactform.js"></script>*@
 
-    });
-    $(window).load(function () {
-        jQuery('#all').click();
-        return false;
-    });
-</script>
-<script src="~/contactform/contactform.js"></script>
+
