--- a/AryanITC.Web/Views/Shared/_Notification.cshtml
+++ b/AryanITC.Web/Views/Shared/_Notification.cshtml
@@ -1,4 +1,11 @@
-﻿@if (TempData["WarningMessage"] != null)
+﻿@if (TempData["SuccessMessage"] != null)
+{
+    <script>
+        ShowMessage('اعلان موفقیت', '@TempData["SuccessMessage"]', 'success');
+    </script>
+}
+
+@if (TempData["WarningMessage"] != null)
 {
     <script>
         ShowMessage('اخطار', '@TempData["WarningMessage"]', 'warning');
