--- a/AryanITC.Web/Views/_ViewImports.cshtml
+++ b/AryanITC.Web/Views/_ViewImports.cshtml
@@ -1,1 +1,5 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using AryanITC.Web
+@using Microsoft.AspNetCore.Mvc.Localization
+ 
+
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
