Finish Login/LogOut/Register/ActiveAccount

--- a/AryanITC.Web/Views/Account/Login.cshtml
+++ b/AryanITC.Web/Views/Account/Login.cshtml
@@ -1,6 +1,6 @@
 ﻿@model AryanITC.Domain.ViewModels.Account.LoginUserViewModel
 @{
-    ViewData["Title"] = "Login";
+    ViewData["Title"] = "ورود";
 }
 
 <nav aria-label="breadcrumb">
