--- a/AryanITC.Web/Views/Shared/_HeaderReferences.cshtml
+++ b/AryanITC.Web/Views/Shared/_HeaderReferences.cshtml
@@ -1,12 +1,10 @@
-﻿
-<link href="~/styles/bootstrap.min.css" rel="stylesheet" />
-<link href="~/styles/customstyle.css" rel="stylesheet" />
-<link href="~/styles/main.css" rel="stylesheet" />
-<link href="~/styles/mainAll.css" rel="stylesheet" />
-<link href="~/styles/Notification.css" rel="stylesheet" />
+﻿<link href="~/styles/bootstrap.min.css" rel="stylesheet" />
 <link href="~/styles/reset.css" rel="stylesheet" />
+<link href="~/styles/main.css" rel="stylesheet" />
 <link href="~/styles/resp.css" rel="stylesheet" />
-
+<link href="~/styles/mainAll.css" rel="stylesheet" />
+<link href="~/styles/customstyle.css" rel="stylesheet" />
 <link rel="stylesheet" href="/styles/customstyle.css" asp-append-version="true" />
-<link href="/styles/Notification.css" rel="stylesheet" asp-fallback-href-include="true" />
+<link href="~/styles/Notification.css" rel="stylesheet" asp-fallback-href-include="true" />
 
+<link href="~/css/Notification.css" rel="stylesheet" />
