--- a/AryanITC.Web/Views/Shared/Components/MainSlider/MainSlider.cshtml
+++ b/AryanITC.Web/Views/Shared/Components/MainSlider/MainSlider.cshtml
@@ -10,7 +10,7 @@
             <div class="container">
                 <div class="top_content">
                     <div class="row">
-                        <div class="col-lg-12  col-md-6 col-sm-7">
+                        <div class=" ">
                             <div class="top_left_cont flipInY wow animated">
                                 <h3>Colourful &amp; sexy!</h3>
                                 <h2>
