--- a/AryanITC.Web/Views/Shared/_FooterRefrence.cshtml
+++ b/AryanITC.Web/Views/Shared/_FooterRefrence.cshtml
@@ -1,4 +1,4 @@
-﻿@*<script src="/scripts/bootstrap.min.js"></script>*@
+﻿<script src="/scripts/bootstrap.min.js"></script>
 
 <script language="JavaScript" type="text/javascript" src="~/js/wow.js"></script>
 
@@ -11,11 +11,10 @@
 @*<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>*@
 
 
- 
 
-<script src="~/scripts/modules.js"></script>
+
+<script src="/scripts/modules.js"></script>
 <script src="~/scripts/Notification.js"></script>
-
  
 
 <script src="/scripts/customscripts.js"></script>
