Complete Forget & Reset Password

--- a/AryanITC.Web/Views/Account/ActiveEmailAccount.cshtml
+++ b/AryanITC.Web/Views/Account/ActiveEmailAccount.cshtml
@@ -40,7 +40,7 @@
 
 else
 {
-    <div>
+    <div class="alert alert-danger">
         <a asp-controller="Home" asp-action="NotFound"> درخواست شما با خطا مواجه شد.</a>
     </div>
 }
