--- a/AryanITC.Web/Views/Account/Login.cshtml
+++ b/AryanITC.Web/Views/Account/Login.cshtml
@@ -54,7 +54,7 @@
             <span asp-validation-for="Password" class="field-validation-valid col-md-12 text-danger"></span>
 
             <button class="submit-login  text-center" onclick="SendVerificationCode.html"> ورود</button>
-            <p class="forgot text-center"><a href="ForgotPassword">رمز ورود خود را فراموش کردم!</a></p>
+            <p class="forgot text-center"><a href="https://localhost:44385/forgotpassword">رمز ورود خود را فراموش کردم!</a></p>
             <br/>
 
         </form>
