--- a/AryanITC.Web/wwwroot/css/style.css
+++ b/AryanITC.Web/wwwroot/css/style.css
@@ -2715,6 +2715,19 @@ form.form1 {
 		border: 2px solid rgba(0, 0, 0, 0.18) !important;
 	}
 
+.submit-resetPass {
+    cursor: pointer;
+    border-radius: 5em;
+    color: #fff;
+    background: linear-gradient(to right, #49b1e1, #49b5e7);
+    border: 0;
+    padding-left: 60px;
+    padding-right: 60px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    margin-right: 30%;
+    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
+}
 .submit-login {
 	cursor: pointer;
 	border-radius: 5em;
