Create Users List

--- a/AryanITC.Web/Areas/AdminPanel/Views/Shared/_AdminLayout.cshtml
+++ b/AryanITC.Web/Areas/AdminPanel/Views/Shared/_AdminLayout.cshtml
@@ -5,7 +5,7 @@
 
 <head>
     <partial name="_MetaTags" />
-    <title> قالب</title>
+    <title> آریان ITC | @ViewData["Title"]</title>
     <partial name="Styles" />
     <script src="/Admin/assets/js/jquery.min.3.6.0.js"></script>
     @RenderSection("Styles", false)
@@ -37,8 +37,8 @@
         <div class="row">
             <div class="col-lg-7 col-md-6 col-sm-12">
                 <h2>
-                    تایتل قالب
-                    <small class="text-muted">تایتل ثالب</small>
+                  آریان ITC
+                    <small class="text-muted"> به ادمین آریان ITC  خوش آمدید. </small>
                 </h2>
             </div>
             <div class="col-lg-5 col-md-6 col-sm-12">
