Edit Admin User

--- a/AryanITC.Web/Areas/AdminPanel/Views/User/Index.cshtml
+++ b/AryanITC.Web/Areas/AdminPanel/Views/User/Index.cshtml
@@ -127,7 +127,7 @@
                                                         }
                                                     </td>
                                                     <td>
-                                                        <a data-toggle="tooltip" title="ویرایش" asp-action="" asp-route-id="">
+                                                        <a data-toggle="tooltip" title="ویرایش" asp-action="EditUser" asp-route-id="@user.Id">
                                                             <i class="material-icons">create</i>
                                                         </a>
                                                         <a data-toggle="tooltip" title="کیف پول کاربر" asp-action="" asp-route-id="">
