--- a/AryanITC.Web/Areas/AdminPanel/Views/Shared/_AdminErrorsLayout.cshtml
+++ b/AryanITC.Web/Areas/AdminPanel/Views/Shared/_AdminErrorsLayout.cshtml
@@ -1,7 +1,119 @@
-﻿
-@{
-    ViewData["Title"] = "_AdminErrorsLayout";
-}
+﻿<!doctype html>
+<html class="no-js " lang="en">
 
-<h1>_AdminErrorsLayout</h1>
+<!-- Mirrored from www.wrraptheme.com/templates/compass/hospital/404.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 29 Jul 2019 10:33:24 GMT -->
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+    <meta name="description" content="Responsive Bootstrap 4 and web Application ui kit.">
 
+    <title>پنل ادمین | @ViewData["Title"]</title>
+
+    <!-- Favicon-->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <!-- Custom Css -->
+    <link rel="stylesheet" href="/Admin/assets/plugins/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/Admin/assets/css/main.css">
+    <link rel="stylesheet" href="/Admin/assets/css/authentication.css">
+    <link rel="stylesheet" href="/Admin/assets/css/color_skins.css">
+    <!-- <link rel="stylesheet" href="assets/css/color_skins.html"> -->
+</head>
+
+<body class="theme-cyan authentication sidebar-collapse">
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg fixed-top navbar-transparent">
+        <div class="container">
+            <div class="navbar-translate n_logo">
+                <a class="navbar-brand" href="#" title="" target="_blank"> آریان ITC</a>
+                <button class="navbar-toggler" type="button">
+                    <span class="navbar-toggler-bar bar1"></span>
+                    <span class="navbar-toggler-bar bar2"></span>
+                    <span class="navbar-toggler-bar bar3"></span>
+                </button>
+            </div>
+            <div class="navbar-collapse">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">خانه</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" title="ما را در توییتر دنبال کنید " href="#" target="_blank">
+                            <i class="zmdi zmdi-twitter"></i>
+                            <p class="d-lg-none d-xl-none">توییتر</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" title="ما را در فیس بوک لایک کنید" href="#" target="_blank">
+                            <i class="zmdi zmdi-facebook"></i>
+                            <p class="d-lg-none d-xl-none">فیس بوک</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" title="ما را در اینستاگرام دنبال کنید" href="#" target="_blank">
+                            <i class="zmdi zmdi-instagram"></i>
+                            <p class="d-lg-none d-xl-none">اینستاگرام</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <!-- End Navbar -->
+    <div class="page-header">
+        <div class="page-header-image" style="background-image:url(/Admin/assets/images/login.jpg)"></div>
+        <div class="container">
+            <div class="col-md-12 content-center">
+                <div class="card-plain">
+                    <form class="form">
+
+                        @RenderBody()
+
+                        @*<div class="content">
+                                <div class="input-group input-lg">
+                                    <input type="text" class="form-control" placeholder="جستجو...">
+                                    <span class="input-group-addon">
+                                        <i class="zmdi zmdi-search"></i>
+                                    </span>
+                                </div>
+                            </div>*@
+                        <div class="footer text-center">
+                            <a href="/AdminPanel" class="btn l-cyan btn-round btn-lg btn-block waves-effect waves-light">بازگشت به صفحه اصلی</a>
+                            @*<h6 class="m-t-20"><a href="#" class="link">آیا به کمک نیاز دارید ؟</a></h6>*@
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <footer class="footer">
+            <div class="container">
+                <nav>
+                    <ul>
+                        <li><a href="#">تماس با ما</a></li>
+                        <li><a href="#">درباره ما</a></li>
+                        <li><a href="#">سوالات متداول</a></li>
+                    </ul>
+                </nav>
+                <div class="copyright">
+                    &copy;
+                    <script>
+                        document.write(new Date().getFullYear())
+                    </script>,
+                    <span>طراحی شده توسط <a href="#" target="_blank">آریان ITC</a></span>
+                </div>
+            </div>
+        </footer>
+    </div>
+
+    <!-- Jquery Core Js -->
+    <script src="/Admin/assets/bundles/libscripts.bundle.js"></script>
+    <script src="/Admin/assets/bundles/vendorscripts.bundle.js"></script> <!-- Lib Scripts Plugin Js -->
+    <script>
+        $(".navbar-toggler").on('click', function () {
+            $("html").toggleClass("nav-open");
+        });
+    </script>
+</body>
+
+<!-- Mirrored from www.wrraptheme.com/templates/compass/hospital/404.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 29 Jul 2019 10:33:24 GMT -->
+</html>
