Update JavaScript Refrence

--- a/AryanITC.Web/Views/Shared/_HeaderReferences.cshtml
+++ b/AryanITC.Web/Views/Shared/_HeaderReferences.cshtml
@@ -6,5 +6,6 @@
 <link href="~/styles/customstyle.css" rel="stylesheet" />
 <link rel="stylesheet" href="/styles/customstyle.css" asp-append-version="true" />
 <link href="~/styles/Notification.css" rel="stylesheet" asp-fallback-href-include="true" />
-
 <link href="~/css/Notification.css" rel="stylesheet" />
+<link href="~/lib/ionicons/css/ionicons.css" rel="stylesheet" />
+<link href="~/lib/ionicons/css/ionicons.min.css" rel="stylesheet" />
