--- a/AryanITC.Web/Views/Shared/_MainMenu.cshtml
+++ b/AryanITC.Web/Views/Shared/_MainMenu.cshtml
@@ -12,7 +12,7 @@
                     <li><a href="#Portfolio">مشتریان ما</a></li>
                     <li><a href="#pricing">تعرفه هاست</a></li>
                     <li><a href="#client_outer">دامنه ها</a></li>
-                    <li><a href="#team">ابر هاست</a></li>
+                    <li><a href="#features">ابر هاست</a></li>
                     <li><a href="#contact">تماس با ما</a></li>
                     <li><a href="#contact">حساب کاربری</a></li>
 
@@ -26,7 +26,7 @@
                     <li><a href="#Portfolio">مشتریان ما</a></li>
                     <li><a href="#pricing">تعرفه هاست</a></li>
                     <li><a href="#client_outer">دامنه </a></li>
-                    <li><a href="#team">ابر هاست</a></li>
+                    <li><a href="#features">ابر هاست</a></li>
                     <li><a href="#contact">تماس با ما</a></li>
                     <li class="dropdown menu-behavior--hover d-none d-lg-block">
 
