--- a/AryanITC.Web/Views/Shared/_Styles.cshtml
+++ b/AryanITC.Web/Views/Shared/_Styles.cshtml
@@ -1,5 +1,7 @@
 ﻿@*<link rel="icon" href="favicon.png" type="image/png">*@
 <link href="~/css/bootstrap.css" rel="stylesheet" type="text/css">
+ 
+
 <link href="~/css/style.css" rel="stylesheet" type="text/css" asp-append-version="true">
 <link href="~/css/linecons.css" rel="stylesheet" type="text/css">
 <link href="~/css/font-awesome.css" rel="stylesheet" type="text/css">
@@ -10,5 +12,5 @@
 <link href="~/assets/vendor/aos/aos.css" rel="stylesheet" type="text/css">
 <link href="~/assets/vendor/icofont/icofont.min.css" rel="stylesheet" type="text/css">
 <link href="~/assets/vendor/boxicons/css/animations.css" rel="stylesheet" type="text/css">
- 
- 
+<link href="~/lib/animate/animate.css" rel="stylesheet" />
+<link href="~/lib/animate/animate.min.css" rel="stylesheet" />
