--- a/AryanITC.Web/Views/Shared/_Footer.cshtml
+++ b/AryanITC.Web/Views/Shared/_Footer.cshtml
@@ -5,7 +5,7 @@
 
     <div class="container">
         <div class="footer_bottom">
-            <span>© Butterfly Theme</span>
+            <span>Aryan Group ©</span>
             <div class="credits">
               
                 Designed by <a href="https://AryanITC.com/">AryanITC</a>
