--- a/AryanITC.Web/Views/Shared/_MainMenu.cshtml
+++ b/AryanITC.Web/Views/Shared/_MainMenu.cshtml
@@ -47,13 +47,13 @@
                         else
                         {
                             <li>
-                                <a asp-controller="Account" asp-action="Login" id="dropdownSignIn" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="btn btn-outline btn-outline-primary btn-register ">
+                                <a asp-controller="Account" asp-action="Login" id="dropdownSignIn"  aria-haspopup="true" aria-expanded="false" class="btn btn-outline btn-outline-primary btn-register ">
                                     <span> حساب کاربری</span>
                                 </a>
                             </li>
                             <li>
 
-                                <a asp-controller="Account" asp-action="Register" class="btn btn-outline btn-outline-primary btn-register   direct-register-link" rel="nofollow noopener">ثبت نام</a>
+                                <a asp-controller="Account" asp-action="Register" class="btn btn-outline btn-outline-primary btn-register" rel="nofollow noopener">ثبت نام</a>
                             </li>
 
                         }
