--- a/AryanITC.Web/wwwroot/css/style.css
+++ b/AryanITC.Web/wwwroot/css/style.css
@@ -2760,7 +2760,11 @@ form.form1 {
 	color: #0000002f;
 	padding-top: 15px;
 }
-
+.rememberMe {
+	text-shadow: 0px 0px 3px rgba(117, 117, 117, 0.12);
+	color: #428bca;
+	padding-top: 15px;
+}
 
 /*
 .sign {
