--- a/AryanITC.Web/Areas/AdminPanel/Views/Shared/_RightSideBar.cshtml
+++ b/AryanITC.Web/Areas/AdminPanel/Views/Shared/_RightSideBar.cshtml
@@ -61,10 +61,10 @@
                 </a>
                 <ul class="ml-menu">
                     <li>
-                        <a asp-controller=" " asp-action=" ">  لیست نقش ها    </a>
+                        <a asp-controller="Role" asp-action="Index">  لیست نقش ها    </a>
                     </li>
                     <li>
-                        <a>
+                        <a asp-controller="Role" asp-action="CreateRole">
                             <span> افزدون نقش جدید</span>
                         </a>
                     </li>
