--- a/AryanITC.Web/Areas/AdminPanel/Views/User/Index.cshtml
+++ b/AryanITC.Web/Areas/AdminPanel/Views/User/Index.cshtml
@@ -19,7 +19,7 @@
         <div class="col-md-3 col-sm-12">
 
             <div>
-                <a class="btn-success custom-btn-create"> افزودن کاربر جدید</a>
+                <a  class="btn-success custom-btn-create" asp-action="CreateUser"> افزودن کاربر جدید</a>
             </div>
 
             <div class="card">
