--- a/AryanITC.Web/Views/Shared/Components/MainSlider/MainSlider.cshtml
+++ b/AryanITC.Web/Views/Shared/Components/MainSlider/MainSlider.cshtml
@@ -11,7 +11,8 @@
                 <div class="top_content">
                     <div class="row">
                         <div class=" ">
-                            <div class="top_left_cont flipInY wow animated">
+                            <div class="top_left_cont fadeInLeft wow animated">
+ 
                                 <h3>Colourful &amp; sexy!</h3>
                                 <h2>
                                     درباره آریان؟?/
@@ -19,9 +20,9 @@
                                 </h2>
                                 <p class="text-right">
                                     Accusantium آریان,
-                                    <br />
+                                    <br/>
                                     aliquam eget آریان آریانآریان .
-                                    <br />
+                                    <br/>
                                     درباره درباره درباره درباره درباره
                                 </p>
                                 <a href="#service" class="learn_more2">Learn more</a>
